<resources>
    <string name="app_name">Agventure</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaves_image">leaves</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="name_hint">Name</string>
    <string name="continue_login">Sign In</string>
    <string name="continue_signup">Sign Up</string>
    <string name="img_auth">Auth image</string>
    <string name="placeholder">placeholder</string>
    <string name="seller_login">Continue as seller</string>
    <string name="customer_login">Continue as consumer</string>
    <string name="price_hint">Price</string>
    <string name="quantity_hint">Quantity</string>
</resources>